fix spacing between hr and signature heading

--- a/src/sass/components/Signature.scss
+++ b/src/sass/components/Signature.scss
@@ -1,10 +1,6 @@
 .Signature {
   margin-bottom: 5em;
 
-  h2 {
-    margin-top: 0;
-  }
-
   .usa-font-lead {
     color: $color-gray-dark;
     margin-top: .5em;
